--- a/index.html
+++ b/index.html
@@ -29,14 +29,12 @@
       .app {
         display: flex;
         flex-direction: column;
-        height: 100%;
-        width: -moz-fit-content;
-        width: fit-content;
+        
       }
     </style>
   </head>
   <body>
-    <div id="app" class="app"></div>
+    <div id="app" class="app" style="    width: -webkit-fill-available;"></div>
     <script type="module" src="./src/index.jsx"></script>
   </body>
 </html>
